# ares

./: CHANGELOG.md  CONTRIBUTING.md  INCOMPLETE.md  LICENSE-APACHE  NOTICE  README.md  ROADMAP.md  install.bat  install.sh  start-backend.sh  start-desktop-tauri.sh  start-desktop.sh  start-web.sh  test_emitter_agl_config.py
.github/workflows/: atak-plugin.yml  ci.yml
atak-plugin/: README.md  build.gradle  local.properties.example  settings.gradle
atak-plugin/app/: build.gradle
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/: algorithms_routes.py  aprs_routes.py  atak_routes.py  auth_routes.py  cellular_routes.py  chat_routes.py  cyber_routes.py  df_routes.py  geo_routes.py  osint_routes.py  routes.py  sdr_routes.py  system_routes.py  targets_routes.py  uas_routes.py
backend/app/core/: audio_capture.py  auth.py  chat.py  clutter.py  cot.py  geolocation.py  gnuradio_zmq.py  kmz.py  meshsec.py  mission_package.py  multilaterate.py  native.py  net_state.py  pack_builder.py  packs.py  regions.py  (+12 more)
backend/native/: Cargo.toml  pyproject.toml
backend/native/src/: lib.rs
backend/scripts/: preload_terrain.py
backend/tests/: bench_oxidation.py  test_afsk1200.py  test_aprs.py  test_authoritative.py  test_cellular_classifier.py  test_cot_inbound.py  test_mesh_codec.py  test_mesh_transports.py  test_native_parity.py  test_targets_tracker.py  test_validation.py
docs/: AUTHORITATIVE_v2.md  Ares.md  BUILD_PLAN.md  DEPLOYMENT.md  REMOTE.md  TRACK_D_PLAN.md  build_pdfs.py  capture_screenshots.py
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.css  App.jsx  appDefaults.js  main.jsx  session.js
frontend/tests/: units.test.mjs
mobile/: package.json
mobile/src/: App.tsx
scripts/: ares-nic-helper  build-native.sh  bundle_vendor.sh  check_license_headers.py  install-signalhound.sh
src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dist-shell/: index.html
src-tauri/src/: main.rs
(+217 files in other folders)
